loc/static/base.css
/* ... */
.search_results_body .results_nav form select {
    font-size: 1em;
}
.search_results_body .results_nav p.term {
    color: #600;
    margin-bottom: 5px;
}
table.search_results {
    margin: 0 auto;
}
table.search_results td {
    vertical-align: top;
    padding: 10px 17px;
}
/************************ begin gallery ******/
.search_results_body.gallery {
    background-color: #000;
    padding-top: 0;
}
.search_results_body.gallery.issues {
    padding-top: 10px;
}
.search_results_body.gallery .results_nav {
    background-color: #fff;
    margin-top: 0;
    padding-top: 10px;
}
.search_results_body.gallery table.search_results a:link {
    color: #ddd;
    text-decoration: underline;
}
.search_results_body.gallery table.search_results a:visited {
    color: red;
}
.search_results_body.gallery table.search_results a:focus,
.search_results_body.gallery table.search_results a:hover,
.search_results_body.gallery table.search_results a:active {
    color: #fff;
    text-decoration: underline;
}
/************************ end gallery ******/
.highlite {
    width: 200px;
}
img.highlite {
    pointer-events: none;
}
.highlite img.thumbnail {
    margin-bottom: 2px;
}
img.thumbnail {
    border: 2px solid #ccc;
}
.search_results_body ul.results_list {
    list-style: none;
    padding-left: 15px;
}
.search_results_body ul.results_list li {
    padding: 0;
    margin-bottom: 8px;
    clear: both;
}
.search_results_body ul.results_list li span.order {
    color: #666;
}

.search_results a:visited,
.results_list a:visited {
    color: red;
}

/********************* browse collection *********************/
.browse_collect_toppane {
    border: 1px solid #c3d5e0;
    border-top: none;
    border-bottom: none;
    padding: 10px 15px;
}
.browse_collect_ctrl {
    border: 1px solid #c3d5e0;
    padding: 9px 15px;
    background-color: #eff6fd;
}
.browse_collect_ctrl.titles {
    background-color: #fafbfd;
}
.browse_collect_ctrl.top {
    border-bottom: none;
}
.browse_collect_ctrl.bot {
    border-top: none;
    margin-bottom: 1em;
}
.browse_collect_ctrl_sub {
    padding: 9px 15px;
    background-color: #f7fafd;
    border: 1px solid #c3d5e0;
    border-top: none;
    border-bottom: none;
}
.browse_collect_ctrl form,
.browse_collect_ctrl_sub form {
    margin-bottom: 0;
}
.browse_collect_body {
    padding: 10px 0;
    border: 1px solid #c3d5e0;
}
.browse_collect_body .txt_wrapper {
    padding: 0 15px;
}
table.browse_collect {
    width: 100%;
    margin-bottom: 1em;
}
table.browse_collect * {
    vertical-align: top;
}
table.browse_collect tr.alt td {
    background-color: #fdfeee;
}
table.browse_collect th,
table.browse_collect td {
    padding: 8px 15px;
}
table.browse_collect th {
    background-color: #f2f2f2;
    border-top: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
}
table.browse_collect td {
    color: #666;
    background: transparent url(./images/table_dot.gif) 0 bottom repeat-x;
}
table.browse_collect td.first {
    background: transparent url(./images/table_dot_first.gif) 0 bottom no-repeat;
}
table.browse_collect td.last {
    background: transparent url(./images/table_dot_last.gif) 100% bottom
        no-repeat;
}

/********************* issues - browse all *********************/
div.calendar_wrapper {
    margin: 0 auto;
}
div.calendar_wrapper table.month {
    margin: 5px 10px;
    border: 1px solid #ccc;
    border-right: none;
    border-bottom: none;
    color: #999;
    text-align: center;
}
div.calendar_wrapper div.calendar_row {
    white-space: nowrap;
}
div.calendar_wrapper div.calendar_month {
    vertical-align: top;
}
div.calendar_wrapper table.month tr.daynames td {
    color: #333;
}
div.calendar_wrapper table.month th,
div.calendar_wrapper table.month td {
    text-align: center;
    border: 1px solid #ccc;
    border-left: none;
    border-top: none;
}
div.calendar_wrapper table.month td {
    vertical-align: top;
    padding: 1px 4px;
}
div.calendar_wrapper table.month td.title {
    font-size: 1.125em;
    color: #fff;
    background-color: #2b4e70;
    padding-top: 5px;
    padding-bottom: 6px;
}
div.calendar_wrapper table.month td a {
    font-weight: bold;
}
div.calendar_wrapper table.month td.single {
    font: bold 90% verdana, georgia, times, serif;
}
div.calendar_wrapper table.month td.multiple {
    font: bold italic 90% verdana, georgia, times, serif;
    color: #036;
}
div.calendar_wrapper div.span3 {
    display: inline-block;
}
td.multiple ul {
    padding: 0;
    margin: 0;
}
td.multiple li {
    list-style-type: none;
}
/********************* issues - about *********************/
.about_issue_right {
    margin-bottom: 1.25em;
}
.about_issue_right .frontpage {
    float: left;
}
.about_issue_right .info {
    width: 178px;
    float: right;
}
.about_issue_right h3 {
    font-size: 1em;
    margin-bottom: 1em;
}
h4.browse {
    border-top: 1px solid #ccc;
    padding-top: 9px;
    margin-bottom: 7px;
}
.view_cal {
    padding: 10px 0 10px 24px;
    background: transparent url(./images/calendar_icon.gif) 0 9px no-repeat;
}
.about_issue_more {
    clear: both;
    color: #666;
    padding-top: 10px;
}

/********************* issues - holding *********************/
.holding {
    color: #000;
}
.holding h3 {
    font-weight: bold;
    font-size: 1em;
    margin-bottom: 1em;
}
.holding h3 span {
    font-weight: normal;
    color: #666;
}
.holding h4 {
    font-weight: normal;
    color: #666;
    margin-left: 20px;
}
.holding ul {
    list-style: none;
    padding-left: 20px;
}
.holding ul li {
    padding: 0;
    margin-bottom: 1px;
}
.holding p.lastupdate {
    font-style: italic;
    font-size: 0.9em;
    color: #666;
}
.holding p.rule {
    background: transparent url(./img-std/dot.gif) 0 100% repeat-x;
    padding-bottom: 14px;
}

/********************* issues - marc record *********************/
table.marc-record th,
table.marc-record td {
    padding: 2px 6px 2px 0;
}
table.marc-record span.marc-subfield-code {
    color: #690;
}
/* ... */

